[package]
name = "bank"
version = "0.1.0"
description = "A USDC Bank program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bank"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "1.0.2", features = ["init-if-needed"]}
anchor-spl = "1.0.2"

[dev-dependencies]
anchor-litesvm = "0.4.0"
litesvm = "0.10.0"
solana-keypair = "3.1.2"
solana-sdk = "2.3"
spl-token = "9.0.0"
