[package]
name = "bank_test_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bank = { path = "..", features = ["no-entrypoint"] }
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
anchor-litesvm = "0.4.0"
litesvm = "0.10.0"
solana-keypair = "3.1.2"
solana-sdk = "2.3"
chrono = "0.4.45"
serde = "1.0.228"
serde_json = "1.0.150"
